--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,13 +1,19 @@
 ---
 # tasks file for common
-- name: checks required packages
+- name: checks packages
   apt: name={{item}} state=present
   loop: "{{common_pkg_list}}"
   loop_control:
     label: "{{item}}"
   when:
     - common_pkg_list is defined
-    - common_svc_list is defined
+    - common_pkg_list
   tags:
     - pkg
   notify: checks services
+
+- name: checks /etc/docker/daemon.json file
+  template: src=daemon.json.j2 dest=/etc/docker/daemon.json mode=0644
+  tags:
+    - json
+  notify: restarts docker service
