--- a/docker_build_and_run.yml
+++ b/docker_build_and_run.yml
@@ -4,3 +4,11 @@
   become: true
   roles:
     - role: common
+      priv_reg_ip_addr: 192.168.10.10
+
+- name: checks build server
+  hosts: pkg
+  become: true
+  roles:
+    - role: build_server
+      priv_reg_ip_addr: 192.168.10.10
