--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -2,7 +2,7 @@
 # defaults file for common
 common_pkg_list:
   - docker.io
-  - python3-docker
+  - python-docker
 common_svc_list:
   - docker
   - containerd
