--- a/docker_build_and_run.yml
+++ b/docker_build_and_run.yml
@@ -12,3 +12,10 @@
   roles:
     - role: build_server
       priv_reg_ip_addr: 192.168.10.10
+
+- name: checks app server
+  hosts: app
+  become: true
+  roles:
+    - role: app_server
+      priv_reg_ip_addr: 192.168.10.10
