--- a/roles/build_server/defaults/main.yml
+++ b/roles/build_server/defaults/main.yml
@@ -1,7 +1,6 @@
 ---
 # defaults file for build_server
+app_img_tag: localhost:5000/test:latest
 bld_dir_path: /data/build
-priv_reg_dir_path: /data/reg
-priv_reg_ip_addr:
-app_img_tag: "{{priv_reg_ip_addr|default('localhost')}}:5000/myapp:latest"
 dockerfile_dst_path: "{{bld_dir_path}}/Dockerfile"
+reg_dir_path: /data/registry
